Sync all content

--- a/content/resources/mit15-005.md
+++ b/content/resources/mit15-005.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: Blue and white tablets spilling out of a prescription bottle on top of
     a pile of crisp twenty dollar bills.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: MIT15-005.jpg
 uid: 48c72b12-0199-5811-dc3e-c811a422f476
