--- a/content/resources/mit15-005-th.md
+++ b/content/resources/mit15-005-th.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: Blue and white tablets spilling out of a prescription bottle on top of
     a pile of crisp twenty dollar bills.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: MIT15-005-th.jpg
 uid: 227439e0-f004-c9e0-5401-bfc9a552c34e
